
[TestMetaQueryBuilderSnapshot/StandardTable/clickhouse - 1]
WITH parts AS (
    SELECT
        database AS schema,
        table,
        max(modification_time) AS updated_at
    FROM clusterAllReplicas(default, system.parts) prts
    GROUP BY database, table
)
SELECT
    toInt64(max(total_rows)) AS num_rows,
    max(parts.updated_at) as last_loaded_at
FROM clusterAllReplicas(default, system.tables) tbls
LEFT JOIN parts
    ON tbls.database = parts.schema
    AND tbls.name = parts.table
WHERE has_own_data = 1
  AND schema NOT IN ('system', 'information_schema')
  AND database = 'my_schema'
  AND name = 'my_table'
SETTINGS join_use_nulls=1
---

[TestMetaQueryBuilderSnapshot/TableWithUppercase/clickhouse - 1]
WITH parts AS (
    SELECT
        database AS schema,
        table,
        max(modification_time) AS updated_at
    FROM clusterAllReplicas(default, system.parts) prts
    GROUP BY database, table
)
SELECT
    toInt64(max(total_rows)) AS num_rows,
    max(parts.updated_at) as last_loaded_at
FROM clusterAllReplicas(default, system.tables) tbls
LEFT JOIN parts
    ON tbls.database = parts.schema
    AND tbls.name = parts.table
WHERE has_own_data = 1
  AND schema NOT IN ('system', 'information_schema')
  AND database = 'MySchema'
  AND name = 'MyTable'
SETTINGS join_use_nulls=1
---

[TestMetaQueryBuilderSnapshot/TableWithUnderscores/clickhouse - 1]
WITH parts AS (
    SELECT
        database AS schema,
        table,
        max(modification_time) AS updated_at
    FROM clusterAllReplicas(default, system.parts) prts
    GROUP BY database, table
)
SELECT
    toInt64(max(total_rows)) AS num_rows,
    max(parts.updated_at) as last_loaded_at
FROM clusterAllReplicas(default, system.tables) tbls
LEFT JOIN parts
    ON tbls.database = parts.schema
    AND tbls.name = parts.table
WHERE has_own_data = 1
  AND schema NOT IN ('system', 'information_schema')
  AND database = 'my_schema_456'
  AND name = 'my_table_789'
SETTINGS join_use_nulls=1
---

[TestMetaQueryBuilderSnapshot/TableWithHyphens/clickhouse - 1]
WITH parts AS (
    SELECT
        database AS schema,
        table,
        max(modification_time) AS updated_at
    FROM clusterAllReplicas(default, system.parts) prts
    GROUP BY database, table
)
SELECT
    toInt64(max(total_rows)) AS num_rows,
    max(parts.updated_at) as last_loaded_at
FROM clusterAllReplicas(default, system.tables) tbls
LEFT JOIN parts
    ON tbls.database = parts.schema
    AND tbls.name = parts.table
WHERE has_own_data = 1
  AND schema NOT IN ('system', 'information_schema')
  AND database = 'my-schema'
  AND name = 'my-table'
SETTINGS join_use_nulls=1
---

[TestMetaQueryBuilderSnapshot/TableWithSpecialChars/clickhouse - 1]
WITH parts AS (
    SELECT
        database AS schema,
        table,
        max(modification_time) AS updated_at
    FROM clusterAllReplicas(default, system.parts) prts
    GROUP BY database, table
)
SELECT
    toInt64(max(total_rows)) AS num_rows,
    max(parts.updated_at) as last_loaded_at
FROM clusterAllReplicas(default, system.tables) tbls
LEFT JOIN parts
    ON tbls.database = parts.schema
    AND tbls.name = parts.table
WHERE has_own_data = 1
  AND schema NOT IN ('system', 'information_schema')
  AND database = 'schema-with-hyphens'
  AND name = 'table_with_underscores'
SETTINGS join_use_nulls=1
---

[TestMetaQueryBuilderSnapshot/TableWithMixedCase/clickhouse - 1]
WITH parts AS (
    SELECT
        database AS schema,
        table,
        max(modification_time) AS updated_at
    FROM clusterAllReplicas(default, system.parts) prts
    GROUP BY database, table
)
SELECT
    toInt64(max(total_rows)) AS num_rows,
    max(parts.updated_at) as last_loaded_at
FROM clusterAllReplicas(default, system.tables) tbls
LEFT JOIN parts
    ON tbls.database = parts.schema
    AND tbls.name = parts.table
WHERE has_own_data = 1
  AND schema NOT IN ('system', 'information_schema')
  AND database = 'my_SCHEMA'
  AND name = 'Table_Name_1'
SETTINGS join_use_nulls=1
---

[TestMetaQueryBuilderSnapshot/ShortNames/clickhouse - 1]
WITH parts AS (
    SELECT
        database AS schema,
        table,
        max(modification_time) AS updated_at
    FROM clusterAllReplicas(default, system.parts) prts
    GROUP BY database, table
)
SELECT
    toInt64(max(total_rows)) AS num_rows,
    max(parts.updated_at) as last_loaded_at
FROM clusterAllReplicas(default, system.tables) tbls
LEFT JOIN parts
    ON tbls.database = parts.schema
    AND tbls.name = parts.table
WHERE has_own_data = 1
  AND schema NOT IN ('system', 'information_schema')
  AND database = 's'
  AND name = 't'
SETTINGS join_use_nulls=1
---

[TestMetaQueryBuilderSnapshot/LongNames/clickhouse - 1]
WITH parts AS (
    SELECT
        database AS schema,
        table,
        max(modification_time) AS updated_at
    FROM clusterAllReplicas(default, system.parts) prts
    GROUP BY database, table
)
SELECT
    toInt64(max(total_rows)) AS num_rows,
    max(parts.updated_at) as last_loaded_at
FROM clusterAllReplicas(default, system.tables) tbls
LEFT JOIN parts
    ON tbls.database = parts.schema
    AND tbls.name = parts.table
WHERE has_own_data = 1
  AND schema NOT IN ('system', 'information_schema')
  AND database = 'very_long_schema_name_with_many_characters_1234567890'
  AND name = 'very_long_table_name_with_many_characters_1234567890'
SETTINGS join_use_nulls=1
---

[TestMetaQueryBuilderSnapshot/NumericSuffixes/clickhouse - 1]
WITH parts AS (
    SELECT
        database AS schema,
        table,
        max(modification_time) AS updated_at
    FROM clusterAllReplicas(default, system.parts) prts
    GROUP BY database, table
)
SELECT
    toInt64(max(total_rows)) AS num_rows,
    max(parts.updated_at) as last_loaded_at
FROM clusterAllReplicas(default, system.tables) tbls
LEFT JOIN parts
    ON tbls.database = parts.schema
    AND tbls.name = parts.table
WHERE has_own_data = 1
  AND schema NOT IN ('system', 'information_schema')
  AND database = 'schema456'
  AND name = 'table789'
SETTINGS join_use_nulls=1
---

[TestMetaQueryBuilderSnapshot/PrefixedNames/clickhouse - 1]
WITH parts AS (
    SELECT
        database AS schema,
        table,
        max(modification_time) AS updated_at
    FROM clusterAllReplicas(default, system.parts) prts
    GROUP BY database, table
)
SELECT
    toInt64(max(total_rows)) AS num_rows,
    max(parts.updated_at) as last_loaded_at
FROM clusterAllReplicas(default, system.tables) tbls
LEFT JOIN parts
    ON tbls.database = parts.schema
    AND tbls.name = parts.table
WHERE has_own_data = 1
  AND schema NOT IN ('system', 'information_schema')
  AND database = 'test_schema'
  AND name = 'staging_table'
SETTINGS join_use_nulls=1
---
